fix: button size not align

--- a/src/index.css
+++ b/src/index.css
@@ -145,10 +145,10 @@ section {
       @apply flex;
 
       .inner {
-        @apply px-5 py-2 rounded-lg bg-white text-black group-hover:bg-black-50 transition-colors duration-300;
+        @apply px-5 py-2 rounded-lg bg-white text-black group-hover:bg-black-50 transition-colors duration-300 ;
 
         span {
-          @apply group-hover:text-white transition-colors duration-300;
+          @apply group-hover:text-white transition-colors duration-300 text-xs md:text-base;
         }
       }
     }
